--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,286 @@
+absl-py==2.1.0
+accelerate==0.21.0
+aiohttp==3.9.5
+aiohttp-cors==0.7.0
+aiosignal==1.3.1
+albucore==0.0.9
+albumentations==1.0.3
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+appdirs==1.4.4
+archspec==0.2.3
+arrow==1.3.0
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.2.0
+autogluon==1.1.0
+autogluon.common==1.1.0
+autogluon.core==1.1.0
+autogluon.features==1.1.0
+autogluon.multimodal==1.1.0
+autogluon.tabular==1.1.0
+autogluon.timeseries==1.1.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+binaryornot==0.4.4
+bleach==6.1.0
+blis==0.7.10
+boltons==24.0.0
+boto3==1.34.120
+botocore==1.34.120
+Brotli==1.1.0
+cachetools==5.3.3
+catalogue==2.0.10
+catboost==1.2.5
+certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+cloudpickle==3.0.0
+colorama==0.4.6
+colorful==0.5.6
+comm==0.2.2
+conda==24.5.0
+conda-libmamba-solver==24.1.0
+conda-package-handling==2.2.0
+conda_package_streaming==0.9.0
+confection==0.1.4
+contourpy==1.2.1
+cookiecutter==2.6.0
+cryptography==42.0.8
+cycler==0.12.1
+cymem==2.0.8
+cytoolz==0.12.3
+dask==2024.5.2
+datasets==2.14.4
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.7
+distlib==0.3.8
+distro==1.9.0
+docker-pycreds==0.4.0
+docopt==0.6.2
+evaluate==0.4.1
+exceptiongroup==1.2.0
+executing==2.0.1
+fastai==2.7.15
+fastcore==1.5.44
+fastdownload==0.0.7
+fastjsonschema==2.19.1
+fastprogress==1.0.3
+filelock==3.14.0
+fonttools==4.53.0
+frozendict==2.4.4
+frozenlist==1.4.1
+fsspec==2024.6.0
+future==1.0.0
+gdown==5.2.0
+gitdb==4.0.11
+GitPython==3.1.43
+gluonts==0.14.3
+gmpy2==2.1.5
+google-api-core==2.19.0
+google-auth==2.29.0
+googleapis-common-protos==1.63.1
+graphviz==0.20.3
+grpcio==1.59.3
+huggingface_hub==0.23.3
+hyperopt==0.2.7
+idna==3.7
+imagecodecs==2024.1.1
+imageio==2.34.1
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+ipykernel==6.29.3
+ipython==8.12.3
+jedi==0.19.1
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
+lazy_loader==0.4
+libmambapy==1.5.8
+lightgbm==4.3.0
+lightning==2.2.5
+lightning-utilities==0.11.2
+llvmlite==0.42.0
+locket==1.0.0
+mamba==1.5.8
+marisa-trie==1.1.0
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+memray==1.12.0
+menuinst==2.1.0
+mistune==3.0.2
+mlforecast==0.10.0
+model-index==0.1.11
+mpmath==1.3.0
+msgpack==1.0.8
+multidict==6.0.5
+multiprocess==0.70.15
+munkres==1.1.4
+murmurhash==1.0.10
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest_asyncio==1.6.0
+networkx==3.3
+nlpaug==1.1.11
+nltk==3.8.1
+nptyping==2.4.1
+numba==0.59.1
 numpy==1.26.4
-Pillow==10.3.0
+omegaconf==2.3.0
+opencensus==0.11.3
+opencensus-context==0.1.3
+opencv-python==4.5.5.64
+opencv-python-headless==4.10.0.82
+openmim==0.3.7
+ordered-set==4.1.0
+orjson==3.9.15
+packaging==24.0
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+partd==1.4.2
+patsy==0.5.6
+pdf2image==1.17.0
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.3.0
+pip==24.0
+pipreqs==0.5.0
+pkgutil_resolve_name==1.3.10
+platformdirs==4.2.2
+plotly==5.22.0
+pluggy==1.5.0
+ply==3.11
+preshed==3.0.9
+prometheus_client==0.20.0
+prompt_toolkit==3.0.46
+proto-plus==1.23.0
+protobuf==4.24.4
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py4j==0.10.9.7
+pyarrow==15.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycosat==0.6.6
+pycparser==2.22
+pydantic==2.7.3
+pydantic_core==2.18.4
+Pygments==2.18.0
+pyOpenSSL==24.0.0
+pyparsing==3.1.2
+PyQt5==5.15.9
+PyQt5-sip==12.12.2
+PySocks==1.7.1
+pytesseract==0.3.10
+python-dateutil==2.9.0
+python-slugify==8.0.4
+pytorch-lightning==2.2.2
+pytorch-metric-learning==2.3.0
+pytz==2024.1
+pyu2f==0.1.5
+PyWavelets==1.4.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+ray==2.11.0
+referencing==0.35.1
+regex==2024.5.15
+requests==2.32.3
+responses==0.18.0
+rich==13.7.1
+rpds-py==0.18.1
+rsa==4.9
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+s3transfer==0.10.1
+safetensors==0.4.3
+scikit-image==0.23.2
+scikit-learn==1.4.2
 scipy==1.13.1
+sentencepiece==0.1.99
+sentry-sdk==2.5.0
+seqeval==1.2.2
+setproctitle==1.3.3
+setuptools==70.0.0
+shellingham==1.5.4
+sip==6.7.12
+six==1.16.0
+smart-open==6.4.0
+smmap==5.0.1
+soupsieve==2.5
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+stack-data==0.6.2
+statsforecast==1.4.0
+statsmodels==0.14.2
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.3.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.0
+tensorboardX==2.6.2.2
+text-unidecode==1.3
+textual==0.65.1
+thinc==8.2.3
+threadpoolctl==3.5.0
+tifffile==2024.5.22
+timm==0.9.16
+tinycss2==1.3.0
+tokenizers==0.19.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.1
 torch==2.1.2.post300
+torchmetrics==1.2.1
 torchvision==0.16.1+b88453f
+tornado==6.4
 tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.40.2
+truststore==0.8.0
+typer==0.9.4
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.1
+typish==1.9.3
+tzdata==2024.1
+unicodedata2==15.1.0
+urllib3==2.2.1
+utilsforecast==0.1.10
+virtualenv==20.4.7
+wandb==0.17.1
+wasabi==1.1.2
+wcwidth==0.2.13
+weasel==0.3.4
+webencodings==0.5.1
+Werkzeug==3.0.3
+wheel==0.43.0
+window_ops==0.0.15
+xgboost==2.0.3
+xxhash==3.4.1
+yarg==0.1.9
+yarl==1.9.4
+zipp==3.17.0
+zstandard==0.22.0
